--- a/cfn.yml
+++ b/cfn.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: |
   This my Cfn template for EC2 with Security Group 
-
+  
 Resources:
 
   MyWebServer:
@@ -9,27 +9,29 @@ Resources:
     Properties:
       ImageId: ami-01c647eace872fc02
       InstanceType: t2.micro
-      KeyName: ottoaws9
+      KeyName: firstkey
       SecurityGroupIds: 
         - !Ref MySecGrp
+
       Tags: 
         - Key: Name
           Value: !Sub Osvaldo ${AWS::StackName}
-      UserData:
-        Fn::Base64: |
+      UserData: 
+      Fn::Base64: |
             #! /bin/bash
-            yum update -y
-            yum install httpd -y
-            FOLDER="https://raw.githubusercontent.com/awsdevopsteam/101-kittens-carousel-static-website/master/static-web"
+sudo yum update -y
+sudo yum install httpd -y
+FOLDER="https://raw.githubusercontent.com/mahmutdemirtr/101-kittens-carousel-static-website-ec2/main/static-web"
             cd /var/www/html
-            wget ${FOLDER}/index.html
-            wget ${FOLDER}/cat0.jpg
-            wget ${FOLDER}/cat1.jpg
-            wget ${FOLDER}/cat2.jpg
-            wget ${FOLDER}/cat3.png
+            sudo wget ${FOLDER}/index.html
+            sudo wget ${FOLDER}/cat0.jpg
+            sudo wget ${FOLDER}/cat1.jpg
+            sudo wget ${FOLDER}/cat2.jpg
+            sudo wget ${FOLDER}/cat3.png
             systemctl start httpd
             systemctl enable httpd
      
+
   MySecGrp:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -50,3 +52,4 @@ Outputs:
     Value: !Sub 
       - http://${PublicAddress}
       - PublicAddress: !GetAtt MyWebServer.PublicDnsName
+ 
